--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_USERNAME = USERNAMe_OF_THE_USER_IN_MONGODB_DATABASE
-DATABASE_PASSWORD = PASSWORD_OF_THE_USER_IN_MONGODB_DATABASE
-DATABASE_CLUSTER_NAME = NAME_OF_THE_DATABASE_CLUSTER
+DATABASE_USERNAME = sumitrapokharel
+DATABASE_PASSWORD = QCGuGJDX7kU3LOXu
+DATABASE_CLUSTER_NAME = mongodb+srv://sumitrapokharel:<password>@ecommerce.hq0kztz.mongodb.net/?retryWrites=true&w=majority
 
